--- a/views/intro/index.ejs
+++ b/views/intro/index.ejs
@@ -12,7 +12,7 @@
     <div id="choose-mood">
       <button class="big-button" onclick="location.href = '/chillcategories'">Chill Mode</button>
       <button class="big-button" onclick="location.href = '/partycategories'">Party of One</button>
-      <button class="big-button" onclick="location.href = '/coming'">Join the Party</button>
+      <button class="big-button" onclick="location.href = '/games/party'">Join the Party</button>
     </div>
     <div id="settings">
       <button type="button" class="setting" data-toggle="modal" data-target="#instruction"><img src="https://imagizer.imageshack.com/img922/4830/RW4eT2.png"/></button>
