--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -309,6 +309,7 @@
   /*********************************************** intro/select.ejs ****************************************************/
 
 #category-page{
+
   top: 0;
   width: 100%;
     font-size: 20px;
@@ -318,6 +319,7 @@
           align-items: center;
 }
   #categories{
+
     margin: 10px;
     padding: 2px;
     position: relative;
@@ -330,6 +332,8 @@
   }
    
     .category{
+      background-color: var(--colorShadeA);
+
       font-family: sans-serif;
       border-left: none;
       width: 600px;
@@ -416,7 +420,7 @@ fieldset{
 /*********************************************** game/score.ejs ****************************************************/
 #scorepage{
   border: black 1px solid;
-  height: 70vh;
+  height: 100%;
   display: flex;
   font-family: sans-serif;
   flex-direction: column;
@@ -424,9 +428,8 @@ fieldset{
   align-items: center;
 }
   #new-score{
-    border: 2px var(--colorShadeB) solid;
+    border: 2px var(--colorShadeE) solid;
     color: var(--colorShadeE);
-    background-color: var(--colorShadeC);
     width: 40%;
     height: 30px;
     padding: 0px;
@@ -521,21 +524,18 @@ fieldset{
     
   
     form{
-      height: 83vh;
+      height: 90vh;
       display: flex;
       white-space: nowrap;
       overflow: auto;
       overflow-y: hidden;
-      max-height: 83vh;
-      
-
     }
     #questions{
       display: flex;
       overflow: auto;
       flex: none;
       width: 100%;
-      height: 420px;
+      height: 450px;
       flex-flow: row nowrap;
       scroll-snap-type: x mandatory;
     }
