--- a/views/intro/chillselect.ejs
+++ b/views/intro/chillselect.ejs
@@ -51,10 +51,10 @@ imgArray[23] = 'https://imagizer.imageshack.com/v2/150x100q90/923/P8DCWW.png';
     <% }) %> 
     </div>
     <div id="settings">
-        <button type="button" class="setting" data-toggle="modal" data-target="#instruction"><img src="https://imagizer.imageshack.com/img922/4830/RW4eT2.png"/></button>
-        <button type="button" class="setting" data-toggle="modal" data-target="#profile"><img id="useravatar"src="https://imagizer.imageshack.com/v2/100x150q90/922/1gOV5O.png"></button>
-  
-      </div>
+      <button type="button" class="setting" data-toggle="modal" data-target="#instruction"><img src="https://imagizer.imageshack.com/img923/6177/zFrSwg.png"/></button>
+      <button type="button" class="setting" data-toggle="modal" data-target="#profile"><img id="useravatar"src="https://imagizer.imageshack.com/v2/100x150q90/922/1gOV5O.png"></button>
+
+    </div>
   
       <!-- Modals begin-->
       <div class="modal fade" id="instruction" role="dialog">
