--- a/views/games/chill.ejs
+++ b/views/games/chill.ejs
@@ -33,8 +33,9 @@
                         <input type="radio" name="choices" value="incorrect" class="radio">
                         <label class="choice"><%- i %></label>
                     </div>
-                    <% }) %>  
+                    <% }) %> 
                 </div>
+                <button style="margin-left: 40vw; background-color: blueviolet;">share</button> 
 
                 <script>
 
