--- a/views/games/share.ejs
+++ b/views/games/share.ejs
@@ -15,21 +15,34 @@
         align-items: center;
         height : 80vh;
         background-color: rgb(48, 23, 82);
-        
+        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
     }
 
     #share-score{
         font-family: sans-serif;
         background-color:rgb(143, 97, 219);
-  border: none;
-  color: white;
-  padding: 10px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  margin: 4px 2px;
-  border-radius: 12px
+        box-shadow: rgb(240, 240, 13);
+        border: none;
+        color: white;
+        padding: 10px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        margin: 4px 2px;
+        border-radius: 12px;
+        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
     }
+        #share-score:hover{
+            background-color: rgb(223, 39, 184);
+            box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+        }
 
     
     /* #snap{
