touchups for mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -470,8 +470,8 @@ fieldset{
       margin: 2px;
       padding-left: 0;
     }
-    .useravatarin{
-      width:100px;
+    .useravatar{
+      width: 100px;
       height: 100px;
     }
     .avatar {
