--- a/views/games/score.ejs
+++ b/views/games/score.ejs
@@ -17,17 +17,13 @@
     justify-content: center;
     align-items: center;
   }
-  #useravatar{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-  }
+  
 </style>
 
     <div id="scorepage">
 
       <div id="avatar_score">
-        <img  id="useravatar" src=""> 
+        <img  id="scoreavatar" class="useravatar" src=""> 
 
         <div id="new-score">
 
@@ -98,7 +94,7 @@
 
 <script>
 
-document.getElementById('useravatar').setAttribute('src', localStorage.getItem('avatar'));
+document.getElementById('scoreavatar').setAttribute('src', localStorage.getItem('avatar'));
 
 
   Storage.prototype.setObj = function(key, obj) {
