--- a/views/intro/chillselect.ejs
+++ b/views/intro/chillselect.ejs
@@ -99,7 +99,7 @@ imgArray[23] = 'https://imagizer.imageshack.com/v2/150x100q90/923/P8DCWW.png';
             </div>
             <div class="modal-body">
 
-              <img  id="useravatarin" src=""> 
+              <img  id="chillavatar" class="useravatar" src=""> 
   
               <table>
                 <tr>
@@ -164,7 +164,7 @@ imgArray[23] = 'https://imagizer.imageshack.com/v2/150x100q90/923/P8DCWW.png';
     <script>
       
       document.getElementById('useravatar').setAttribute('src', localStorage.getItem('avatar'));
-      document.getElementById('useravatarin').setAttribute('src', localStorage.getItem('avatar'));
+      document.getElementById('chillavatar').setAttribute('src', localStorage.getItem('avatar'));
 
       document.getElementById('user').innerText= "Welcome "+localStorage.getItem('user')+"!";
   
