--- a/views/intro/index.ejs
+++ b/views/intro/index.ejs
@@ -14,7 +14,7 @@
       <button class="big-button" onclick="location.href = '/partycategories'">Party of One</button>
       <button class="big-button" onclick="location.href = '/games/party'">Join the Party</button>
     </div>
-    <div id="settings">
+    <div class="settings" id="stay">
       <button type="button" class="setting" data-toggle="modal" data-target="#instruction"><img src="https://imagizer.imageshack.com/img923/6177/zFrSwg.png"/></button>
       <button type="button" class="setting" data-toggle="modal" data-target="#profile"><img id="useravatar"src="https://imagizer.imageshack.com/v2/100x150q90/922/1gOV5O.png"></button>
 
